fixed themes and dark modes

--- a/css/style.css
+++ b/css/style.css
@@ -20,11 +20,18 @@
     --theme-dark: #373737;
 }
 
-/* TABLE FORMATTING */
 div#test {
     display: flex;
     justify-content: center;
 }
+
+div#title {
+    margin-top: 25px;
+    display: flex;
+    justify-content: center;
+}
+
+/* TABLE FORMATTING */
 
 table {
     border: 3px solid;
@@ -32,7 +39,7 @@ table {
     border-color: green;
     border-collapse: collapse;
     margin: 10px;
-    margin-top: 75px;
+    margin-top: 50px;
 }
 
 table#todolist {
